force-app/main/default/objects/Customer_Address__c/Customer_Address__c.object-meta.xml
<CustomObject>
    <label>Customer Address</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>