force-app/main/default/objects/Customer_Address__c/fields/Is_Default_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Address</label>
    <type>Checkbox</type>
</CustomField>